--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -254,8 +254,7 @@ folder without a new folder, you can do one of the following:
 
 <TabItem value="cli">
 
-You can pass in the following flags when your generating your new instance and
-you will no longer be prompted those questions
+You can pass in the following flags when your generating your new instance
 
 ```bash
 tps react-component footer --no-newFolder
@@ -339,7 +338,7 @@ tps react-component Nav --typescript -e tsx
 Produces:
 
 ```txt
-| - NaV
+| - Nav
 	| - index.tsx
 	| - Nav.tsx
 	| - Nav.css
@@ -453,7 +452,7 @@ tps react-component Nav
 Would produce:
 
 ```txt
-| - NaV
+| - Nav
 	| - index.tsx
 	| - Nav.tsx
 	| - Nav.css
