--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -225,9 +225,9 @@ add `tsx` to the `extension` answer.
 
 ### No new folder
 
-By default templates will generate a new folder for you. If you dont want a new
-folder for your react component you can use
-[`newFolder`](../../api/template#new-folder) option
+By default, templates create a new folder for you. If you don't want a new
+folder for your react component, you can use the
+[`newFolder`](../../api/template#new-folder) option.
 
 Lets say you have a basic react folder structure like so:
 
