--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -225,7 +225,7 @@ add `tsx` to the `extension` answer.
 
 ### No new folder
 
-By default, templates create a new folder for you. If you don't want a new
+By default, templates creates a new folder for you. If you don't want a new
 folder for your react component, you can use the
 [`newFolder`](../../api/template#new-folder) option.
 
