yargs-cli-cmd: fix broken link on docs

--- a/docs/docs/main/templates/yargs-cli-cmd.mdx
+++ b/docs/docs/main/templates/yargs-cli-cmd.mdx
@@ -22,7 +22,7 @@ For template versions prior to 1.0.24, a new folder is created when generating a
 new instance of this template. This issue has been resolved in version 1.0.24.
 If you are using an incompatible version and wish to avoid a new folder being
 created, please refer to our guide on
-[preventing new folder](/templates/docs/main/templates/yargs-cli-cmd#dont-use-a-new-folder).
+[preventing new folder](/templates/docs/main/templates/yargs-cli-cmd#dont-create-a-new-folder).
 
 :::
 
