generate vs render

--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -233,7 +233,7 @@ app
 
 <Example>
 
-If we were rendering a new instance from a template and we have the build path
+If we were generating a new instance from a template and we have the build path
 `app` then templates will create a new directory called `app` and render all
 contents inside of it
 
@@ -274,7 +274,7 @@ some/path/app
 
 <Example>
 
-If we were rendering a new instance from a template and we have the build path
+If we were generating a new instance from a template and we have the build path
 `code/projects/app` then templates will create a new directory called `app`
 inside of `<cwd>/code/projects` and render all contents inside of it.
 
@@ -307,7 +307,7 @@ the same as passing in one but for each one.
 
 <Example>
 
-If we were rendering a new instance from a template and we have the build paths
+If we were generating a new instance from a template and we have the build paths
 `code/projects/app` & `code/projects/app2` then templates will create new
 directories for both and render contents into both of them.
 
