Docs: Change render a template to generate instance

--- a/docs/docs/main/create-new-template/dynamic-files.mdx
+++ b/docs/docs/main/create-new-template/dynamic-files.mdx
@@ -598,7 +598,8 @@ object. For a full list, you can refer to the
 Name of new instance you are rendering. When rendering two or more instances at
 the same time. The same concept as above apply's but for each path you pass in.
 
-If you render a template with no build path. Then `tps.name` will be null.
+If you generate a new instance of a template with no build path. Then `tps.name`
+will be null.
 
 <Example>
 
