--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -336,11 +336,11 @@ directories for both and render contents into both of them.
 
 </Example>
 
-### How to render a template
+### How to generate a new instance
 
-There are two ways on how to render a template. One is via our command line tool
-or by our `node_module` package. We wont go deep into this topic right now but
-here are some basics.
+There are two ways on how to generate a new instance of a template. One is via
+our command line tool or by our `node_module` package. We wont go deep into this
+topic right now but here are some basics.
 
 `<template-to-use>` is the name of the template you would like to use.
 
