--- a/docs/docs/api/template-context.mdx
+++ b/docs/docs/api/template-context.mdx
@@ -19,7 +19,8 @@ import TabItem from '@theme/TabItem';
 Name of new instance you are rendering. When rendering two or more instances at
 the same time. The same concept as above apply's but for each path you pass in.
 
-If you render a template with no build path. Then `tps.name` will be null.
+If you generate a new instance of a template with no build path. Then `tps.name`
+will be null.
 
 <Example>
 
