fix all eslint errors

--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -7,7 +7,6 @@ sidebar_position: 1
 import { Example } from '@site/docs/components/example';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import CodeBlock from '@theme/CodeBlock';
 
 # Templates
 
@@ -346,8 +345,7 @@ topic right now but here are some basics.
 
 :::tip
 
-Not sure what templates you have? Check out our
-[list command](../../api/cli#list)
+Not sure what templates you have? Check out our [list command](../../api/cli#list)
 
 :::
 
