--- a/docs/blog/2021-08-01-mdx-blog-post.mdx
+++ b/docs/blog/2021-08-01-mdx-blog-post.mdx
@@ -16,11 +16,11 @@ such as [MDX](https://mdxjs.com/).
 Use the power of React to create interactive blog posts.
 
 ```js
-<button type="button" onClick={() => alert('button clicked!')}>
+<button type="button" onClick={() => console.log('button clicked!')}>
 	Click me!
 </button>
 ```
 
-<button type="button" onClick={() => alert('button clicked!')} />
+<button type="button" onClick={() => console.log('button clicked!')} />
 
 :::
