--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -2,21 +2,9 @@ import { TemplateOptions } from '@site/docs/components/templateOptions';
 import { Example } from '@site/docs/components/example';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import Link from '@docusaurus/Link';
 import { Button } from '@site/docs/components/button';
 
 # react-component
-
-<div className="row" style={{ fontSize: 20 }}>
-	<div className="col col--6">🎉 Supports Typescript</div>
-	<div className="col col--6">📗 Supports Storybook</div>
-	<div className="col col--6">🧪 Supports Unit tests</div>
-	<div className="col col--6">💅 Supports multiple CSS languages</div>
-</div>
-
-<br />
-
-Generate a fully functioning React function component.
 
 :::info Now accepting new feature requests
 
@@ -32,6 +20,7 @@ using the form below. We hope to hear from you soon!
 	size="sm"
 	onClick={() => {
 		if (typeof gtag === 'function') {
+			// eslint-disable-next-line no-undef
 			gtag('event', 'feedback_request_click', {
 				event_category: 'Feedback',
 				event_label: 'react-template',
@@ -43,6 +32,17 @@ using the form below. We hope to hear from you soon!
 </Button>
 
 :::
+
+<div className="row" style={{ fontSize: 20 }}>
+	<div className="col col--6">🎉 Supports Typescript</div>
+	<div className="col col--6">📗 Supports Storybook</div>
+	<div className="col col--6">🧪 Supports Unit tests</div>
+	<div className="col col--6">💅 Supports multiple CSS languages</div>
+</div>
+
+<br />
+
+Generate a fully functioning React function component.
 
 ## Usage
 
