Fix correct link on Templates configuration page

--- a/docs/docs/api/tpsrc/index.mdx
+++ b/docs/docs/api/tpsrc/index.mdx
@@ -16,7 +16,7 @@ interface TemplatesConfig {
 TemplateConfig;
 ```
 
-Template configuration. See [Template Config API](./template) for template
+Template configuration. See [Template Config API](./tpsrc/template) for template
 options
 
 ```json title=".tps/.tpsrc"
